force-app/main/default/objects/Position__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angular</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>TypeScript</fullName>
            </value>
            <value>
                <fullName>Node.js</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Trello</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>