force-app/main/default/objects/Position__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>