force-app/main/default/objects/Position__c/recordTypes/Practice.recordType-meta.xml
<RecordType>
    <fullName>Practice</fullName>
    <active>true</active>
    <label>Practice</label>
</RecordType>