force-app/main/default/objects/Position__c/recordTypes/Tech.recordType-meta.xml
<RecordType>
    <fullName>Tech</fullName>
    <active>true</active>
    <label>Tech</label>
</RecordType>