force-app/main/default/objects/Position__c/validationRules/Max_Pay_Lower.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Pay_Lower</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Pay__c &gt; Max_Pay__c</errorConditionFormula>
    <errorDisplayField>Max_Pay__c</errorDisplayField>
    <errorMessage>Max pay cannot be lower than min pay</errorMessage>
</ValidationRule>