force-app/main/default/objects/Position__c/listViews/Open_Positions.listView-meta.xml
<ListView>
    <fullName>Open_Positions</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Location__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Positions</label>
</ListView>